k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openbooklm
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: openbooklm
